<resources>
    <string name="app_name">My Application</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Catégories</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home_second">Home Second</string>
    <string name="home_discover" />
    <string name="home_details">Details</string>
    <string name="title_trending">Tendances</string>
    <string name="best_movies">Films en tendance</string>
    <string name="best_peoples">Personnalités en tendance</string>
    <string name="categories">Catégories</string>
    <string name="navigation_search">Recherche</string> 
    <string name="favoris">Favoris</string>
    <string name="_5_toiles">5 étoiles</string> 
    <string name="title_actors">Actors</string>

    <string-array name="actors_search">
        <item>Series</item>
        <item>Movies</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_actor">Actors</string>
    <string name="search">Search</string>
    <string name="actor_search_hint">Search with serie, movie...</string>
    <string name="actor_search_step_1_title">STEP 1 : Find a movie or TV</string>
    <string name="actor_search_step_2_title">Select the movie or TV to discover actors</string>
    <string name="popularity">Popularity</string>
    <string name="biography">Biography</string>
    <string name="similar_movies">Similar movies</string>
</resources>