<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.gmail.eamosse.imdb.ui.search.SearchFragment"
        android:label="@string/navigation_search"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_SearchFragment_to_HomeDetailsFragment"
            app:destination="@id/navigation_home_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
        <action
            android:id="@+id/action_HomeFragment_to_HomeDiscoverFragment"
            app:destination="@id/navigation_home_discover" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_discover"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeDiscoverFragment"
        android:label="@string/home_discover"
        tools:layout="@layout/fragment_discover">
        <argument
            android:name="genre"
            app:argType="integer" />
        <action
            android:id="@+id/action_HomeDiscoverFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_HomeDiscoverFragment_to_HomeDetailsFragment"
            app:destination="@id/navigation_home_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_details"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeDetailsFragment"
        android:label="@string/home_details"
        tools:layout="@layout/fragment_home_details">
        <action
            android:id="@+id/action_HomeDetailsFragment_to_HomeDiscoverFragment"
            app:destination="@id/navigation_home" />
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/trending_fragment">
        <action
            android:id="@+id/action_TrendingFragment_to_HomeDetailsFragment"
            app:destination="@id/navigation_home_details" />
        <action
            android:id="@+id/action_TrendingFragment_to_HomeDiscoverFragment"
            app:destination="@id/navigation_home_discover" />
    </fragment>
    <fragment
        android:id="@+id/navigation_actors"
        android:name="com.gmail.eamosse.imdb.ui.actor.ActorFragment"
        android:label="@string/navigation_actor"
        tools:layout="@layout/fragment_actor">
        <action
            android:id="@+id/action_ActorFragment_to_ActorDetailsFragment"
            app:destination="@id/fragment_actor_details" />
    </fragment>

    <fragment
        android:id="@+id/fragment_actor_details"
        android:name="com.gmail.eamosse.imdb.ui.actor.ActorDetailsFragment"
        android:label="@string/title_actors"
        tools:layout="@layout/fragment_actor_details">
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>