<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.eamosse.imdb.ui.home.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.HomeFragment">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/category_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher_background"
                app:bindImage="@{viewModel.movie.poster_path}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="20dp"
                android:text="@{viewModel.movie.title}"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_img"
                tools:text="Actions et Aventures" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@{viewModel.movie.tagline}"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_name"
                tools:text="Actions et Aventures" />

            <LinearLayout
                android:id="@+id/movie_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tagline">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/movie_release_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date_range_black_24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{viewModel.movie.release_date}"
                        app:layout_constraintBottom_toBottomOf="@id/movie_release_icon"
                        app:layout_constraintStart_toEndOf="@id/movie_release_icon"
                        app:layout_constraintTop_toTopOf="@id/movie_release_icon" />

                    <ImageView
                        android:id="@+id/movie_revenue_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_attach_money_black_24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movie_release_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{Integer.toString(viewModel.movie.revenue)}"
                        app:layout_constraintBottom_toBottomOf="@id/movie_revenue_icon"
                        app:layout_constraintStart_toEndOf="@id/movie_revenue_icon"
                        app:layout_constraintTop_toTopOf="@id/movie_revenue_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ProgressBar
                        android:id="@+id/movie_rating"
                        style="?android:progressBarStyleHorizontal"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:progress="@{viewModel.movie.vote_average}"
                        android:progressDrawable="@drawable/circle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(viewModel.movie.vote_average) + '%'}"
                        app:layout_constraintBottom_toBottomOf="@id/movie_rating"
                        app:layout_constraintEnd_toEndOf="@id/movie_rating"
                        app:layout_constraintStart_toStartOf="@id/movie_rating"
                        app:layout_constraintTop_toTopOf="@id/movie_rating" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:text="@{viewModel.movie.overview}"
                android:textColor="#ddd"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_info"
                tools:text="Actions et Aventures" />

            <!--            <androidx.appcompat.widget.AppCompatTextView-->
            <!--                android:id="@+id/vote"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginHorizontal="20dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:gravity="center"-->
            <!--                android:textColor="#fff"-->
            <!--                android:textSize="15sp"-->
            <!--                android:textStyle="bold"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/overview"-->
            <!--                app:voteText="@{viewModel.movie}"-->
            <!--                tools:text="6/10 (1000 Votes)" />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/category_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview">

                <!-- BOUTONS CACHES A CAUSE D'UN PETIT BUG -->
                <Button
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.rateCurrentMovie(2f)}"
                    android:text="@string/favoris"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.favorite()}"
                    android:text="@string/_5_toiles"
                    android:visibility="invisible"
                    app:layout_constraintStart_toEndOf="@id/favorite"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- BOUTONS CACHES A CAUSE D'UN PETIT BUG -->


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:autoPlay="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview"
                app:showFullScreenButton="false"
                app:videoId="S0Q4gqBUs7c" />

            <TextView
                android:id="@+id/similar_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/similar_movies"
                android:textColor="#FFF"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/category_list"
                app:layout_constraintTop_toBottomOf="@id/youtube_player_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/similar_movies_title"
                app:layout_constraintVertical_bias="0.0"
                app:spanCount="4"
                tools:listitem="@layout/discover_list_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>